--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,4 +36,8 @@ repos:
     rev: 4.0.1
     hooks:
     - id: flake8
-      args: ['--max-line-length=80']
+      args: [
+        '--max-line-length=88',
+        '--select=C,E,F,W,B,B950',
+        '--extend-ignore=E203,E501'
+      ]
