--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,10 +20,11 @@ repos:
         args: [--markdown-linebreak-ext=md]
 
   - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v4.3.21
+    rev: v5.10.1
     hooks:
       - id: isort
         additional_dependencies: ['toml']
+        args: ["--profile", "black"]
 
   - repo: https://github.com/psf/black
     rev: 22.3.0
