--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+async-timeout==4.0.2
+attrs==22.1.0
 awscli==1.25.45
 boto==2.49.0
 boto3==1.24.45
@@ -7,23 +9,38 @@ certifi==2022.6.15
 charset-normalizer==2.1.0
 click==8.1.3
 colorama==0.4.4
+coverage==6.4.2
 debugpy==1.6.2
+Deprecated==1.2.13
 docutils==0.16
 Flask==2.2.1
-flask-caching==2.0.1
-redis==4.3.4
+Flask-Caching==2.0.1
 idna==3.3
+iniconfig==1.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jmespath==1.0.1
 MarkupSafe==2.1.1
 numpy==1.23.1
+packaging==21.3
+parameterized==0.8.1
+parametrized==0.1
+pluggy==1.0.0
+py==1.11.0
 pyasn1==0.4.8
+pyparsing==3.0.9
+pytest==7.1.2
+pytest-cov==3.0.0
+pytest-mock==3.8.2
 python-dateutil==2.8.2
 PyYAML==5.4.1
+redis==4.3.4
 requests==2.28.1
+responses==0.21.0
 rsa==4.7.2
 s3transfer==0.6.0
 six==1.16.0
+tomli==2.0.1
 urllib3==1.26.11
 Werkzeug==2.2.1
+wrapt==1.14.1
